--- a/Test_jupyternotebook/check_gradient.ipynb
+++ b/Test_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 132,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0053, -0.0007],\n",
-      "        [ 0.0170,  0.0024]])\n",
-      "tensor([ 0.0045, -0.0146])\n",
-      "tensor([[-0.0140, -0.0017],\n",
-      "        [ 0.0140,  0.0017]])\n",
-      "tensor([-0.0492,  0.0492])\n"
+      "tensor([[ 0.0067, -0.0057],\n",
+      "        [-0.1132,  0.0953]])\n",
+      "tensor([ 0.0062, -0.1049])\n",
+      "tensor([[ 0.0287, -0.0587],\n",
+      "        [-0.0287,  0.0587]])\n",
+      "tensor([ 0.0882, -0.0882])\n"
      ]
     }
    ],
@@ -51,7 +51,8 @@
     "        x = self.fc2(x)\n",
     "        return x\n",
     "\n",
-    "model = ClassificationModel()\n",
+    "model = ClassificationModel() # without gradient modifier\n",
+    "model_with_modifier = ClassificationModel()\n",
     "\n",
     "# Cross Entropy Loss와 KL Divergence Loss 정의\n",
     "cross_entropy_loss = nn.CrossEntropyLoss()\n",
@@ -59,6 +60,7 @@
     "\n",
     "# Forward Pass\n",
     "outputs = model(X)\n",
+    "output_with_modifier = model_with_modifier(X)\n",
     "\n",
     "# Cross Entropy Loss 계산\n",
     "ce_loss = F.cross_entropy(outputs, y)\n",
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 118,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
@@ -93,12 +95,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n"
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n"
      ]
     }
    ],
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 119,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
@@ -124,7 +126,7 @@
        "tensor(nan, grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 120,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
@@ -143,9 +145,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[-0.5237, -0.3311],\n",
-      "        [ 0.3590,  0.2290]]), tensor([ 0.8400, -0.5175]), tensor([[-0.0887,  0.0450],\n",
-      "        [ 0.1690,  0.2797]]), tensor([0.4007, 1.1696]))\n"
+      "(tensor([[-0.5257,  0.0265],\n",
+      "        [-0.8808,  0.0445]]), tensor([2.4115, 4.0392]), tensor([[-0.5026,  0.0906],\n",
+      "        [-3.5980,  0.8394]]), tensor([0.8105, 5.8365]))\n"
      ]
     }
    ],
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 121,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
@@ -166,12 +168,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.5237, -0.3311],\n",
-      "        [ 0.3590,  0.2290]])\n",
-      "tensor([ 0.8400, -0.5175])\n",
-      "tensor([[-0.0887,  0.0450],\n",
-      "        [ 0.1690,  0.2797]])\n",
-      "tensor([0.4007, 1.1696])\n"
+      "tensor([[-0.5257,  0.0265],\n",
+      "        [-0.8808,  0.0445]])\n",
+      "tensor([2.4115, 4.0392])\n",
+      "tensor([[-0.5026,  0.0906],\n",
+      "        [-3.5980,  0.8394]])\n",
+      "tensor([0.8105, 5.8365])\n"
      ]
     }
    ],
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 122,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -209,12 +211,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n"
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n"
      ]
     }
    ],
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 123,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -243,24 +245,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n",
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n",
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n"
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n",
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n",
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n"
      ]
     }
    ],
@@ -280,40 +282,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 124,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.0105, -0.0015],\n",
-       "         [ 0.0341,  0.0047]]),\n",
-       " tensor([ 0.0090, -0.0293]),\n",
-       " tensor([[-0.0281, -0.0034],\n",
-       "         [ 0.0281,  0.0034]]),\n",
-       " tensor([-0.0985,  0.0985]),\n",
-       " tensor([[-0.0105, -0.0015],\n",
-       "         [ 0.0341,  0.0047]]),\n",
-       " tensor([ 0.0090, -0.0293]),\n",
-       " tensor([[-0.0281, -0.0034],\n",
-       "         [ 0.0281,  0.0034]]),\n",
-       " tensor([-0.0985,  0.0985]),\n",
-       " tensor([[-0.0105, -0.0015],\n",
-       "         [ 0.0341,  0.0047]]),\n",
-       " tensor([ 0.0090, -0.0293]),\n",
-       " tensor([[-0.0281, -0.0034],\n",
-       "         [ 0.0281,  0.0034]]),\n",
-       " tensor([-0.0985,  0.0985]),\n",
-       " tensor([[-0.2566, -0.1648],\n",
-       "         [ 0.1624,  0.1121]]),\n",
-       " tensor([ 0.4155, -0.2441]),\n",
-       " tensor([[-0.0303,  0.0242],\n",
-       "         [ 0.0705,  0.1382]]),\n",
-       " tensor([0.2496, 0.5356]))"
+       "(tensor([[-0.0280, -0.0529],\n",
+       "         [-0.0470, -0.0888]]),\n",
+       " tensor([0.0762, 0.1279]),\n",
+       " tensor([[ 0.0792, -0.1051],\n",
+       "         [-0.0792,  0.1051]]),\n",
+       " tensor([-0.1973,  0.1973]),\n",
+       " tensor([[-0.0280, -0.0529],\n",
+       "         [-0.0470, -0.0888]]),\n",
+       " tensor([0.0762, 0.1279]),\n",
+       " tensor([[ 0.0792, -0.1051],\n",
+       "         [-0.0792,  0.1051]]),\n",
+       " tensor([-0.1973,  0.1973]),\n",
+       " tensor([[-0.0280, -0.0529],\n",
+       "         [-0.0470, -0.0888]]),\n",
+       " tensor([0.0762, 0.1279]),\n",
+       " tensor([[ 0.0792, -0.1051],\n",
+       "         [-0.0792,  0.1051]]),\n",
+       " tensor([-0.1973,  0.1973]),\n",
+       " tensor([[-0.2488,  0.0397],\n",
+       "         [-0.4169,  0.0667]]),\n",
+       " tensor([1.1676, 1.9556]),\n",
+       " tensor([[-0.2909,  0.0979],\n",
+       "         [-1.7594,  0.3671]]),\n",
+       " tensor([0.5039, 2.8196]))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 125,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -341,12 +343,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0316, -0.0044],\n",
-      "        [ 0.1022,  0.0141]])\n",
-      "tensor([ 0.0271, -0.0878])\n",
-      "tensor([[-0.0842, -0.0102],\n",
-      "        [ 0.0842,  0.0102]])\n",
-      "tensor([-0.2954,  0.2954])\n"
+      "tensor([[-0.0840, -0.1587],\n",
+      "        [-0.1410, -0.2665]])\n",
+      "tensor([0.2286, 0.3838])\n",
+      "tensor([[ 0.2376, -0.3153],\n",
+      "        [-0.2376,  0.3153]])\n",
+      "tensor([-0.5920,  0.5920])\n"
      ]
     }
    ],
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 126,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -375,12 +377,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0316, -0.0044],\n",
-      "        [ 0.1022,  0.0141]])\n",
-      "tensor([ 0.0271, -0.0878])\n",
-      "tensor([[-0.0842, -0.0102],\n",
-      "        [ 0.0842,  0.0102]])\n",
-      "tensor([-0.2954,  0.2954])\n"
+      "tensor([[-0.0840, -0.1587],\n",
+      "        [-0.1410, -0.2665]])\n",
+      "tensor([0.2286, 0.3838])\n",
+      "tensor([[ 0.2376, -0.3153],\n",
+      "        [-0.2376,  0.3153]])\n",
+      "tensor([-0.5920,  0.5920])\n"
      ]
     }
    ],
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 127,
    "id": "fbc6b756",
    "metadata": {},
    "outputs": [
@@ -410,12 +412,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n"
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n"
      ]
     }
    ],
@@ -439,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 128,
    "id": "748e11fe",
    "metadata": {},
    "outputs": [
@@ -448,12 +450,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0105, -0.0015],\n",
-      "        [ 0.0341,  0.0047]])\n",
-      "tensor([ 0.0090, -0.0293])\n",
-      "tensor([[-0.0281, -0.0034],\n",
-      "        [ 0.0281,  0.0034]])\n",
-      "tensor([-0.0985,  0.0985])\n"
+      "tensor([[-0.0280, -0.0529],\n",
+      "        [-0.0470, -0.0888]])\n",
+      "tensor([0.0762, 0.1279])\n",
+      "tensor([[ 0.0792, -0.1051],\n",
+      "        [-0.0792,  0.1051]])\n",
+      "tensor([-0.1973,  0.1973])\n"
      ]
     }
    ],
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 129,
    "id": "17e6215f",
    "metadata": {},
    "outputs": [
@@ -476,12 +478,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[2.9895, 2.9985],\n",
-      "        [3.0341, 3.0047]])\n",
-      "tensor([3.0090, 2.9707])\n",
-      "tensor([[2.9719, 2.9966],\n",
-      "        [3.0281, 3.0034]])\n",
-      "tensor([2.9015, 3.0985])\n"
+      "tensor([[2.9720, 2.9471],\n",
+      "        [2.9530, 2.9112]])\n",
+      "tensor([3.0762, 3.1279])\n",
+      "tensor([[3.0792, 2.8949],\n",
+      "        [2.9208, 3.1051]])\n",
+      "tensor([2.8027, 3.1973])\n"
      ]
     }
    ],
@@ -491,6 +493,90 @@
     "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
     "for grad_param in ce_gradient:\n",
     "    print(torch.tensor(3) + grad_param)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6248c442",
+   "metadata": {},
+   "source": [
+    "## 6. Gradient를 조작했을 떄 뭐가 달라지나?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "86dcf456",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[-0.2732, -0.5517],\n",
+      "        [-0.7075, -0.9522]], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([-1.2873,  0.1420], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([[0.0468, 0.0778],\n",
+      "        [0.8205, 1.3724]], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([-0.3823,  0.1888], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "learning_rate = 0.01\n",
+    "with torch.no_grad():\n",
+    "    for param, grad in zip(model.parameters(), ce_gradient):\n",
+    "        param -= learning_rate * grad\n",
+    "        print(param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "dce046b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Entropy Loss Gradient:\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [2, 2]], which is output 0 of TBackward, is at version 2; expected version 1 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22812\\207602838.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Gradient 확인\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Cross Entropy Loss Gradient:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mce_gradient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mgrad_param\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mce_gradient\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mgrad_param\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\metal\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mgrad\u001b[1;34m(outputs, inputs, grad_outputs, retain_graph, create_graph, only_inputs, allow_unused)\u001b[0m\n\u001b[0;32m    226\u001b[0m     return Variable._execution_engine.run_backward(\n\u001b[0;32m    227\u001b[0m         \u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_outputs_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m         inputs, allow_unused, accumulate_grad=False)\n\u001b[0m\u001b[0;32m    229\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [2, 2]], which is output 0 of TBackward, is at version 2; expected version 1 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True)."
+     ]
+    }
+   ],
+   "source": [
+    "optimizer_with_modifier = optim.SGD(model_with_modifier.parameters(), lr=0.01)\n",
+    "optimizer_without_modifier = optim.SGD(model_without_modifier.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaa93c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01\n",
+    "with torch.no_grad():\n",
+    "    for param, grad in zip(model.parameters(), ce_gradient):\n",
+    "        param -= learning_rate * grad\n",
+    "        print(param)"
    ]
   }
  ],
