--- a/Test_jupyternotebook/check_gradient.ipynb
+++ b/Test_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0067, -0.0057],\n",
-      "        [-0.1132,  0.0953]])\n",
-      "tensor([ 0.0062, -0.1049])\n",
-      "tensor([[ 0.0287, -0.0587],\n",
-      "        [-0.0287,  0.0587]])\n",
-      "tensor([ 0.0882, -0.0882])\n"
+      "tensor([[ 0.0327, -0.0238],\n",
+      "        [-0.0174,  0.0127]])\n",
+      "tensor([-0.0167,  0.0089])\n",
+      "tensor([[ 0.0453, -0.0398],\n",
+      "        [-0.0453,  0.0398]])\n",
+      "tensor([-0.0326,  0.0326])\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
@@ -95,12 +95,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n"
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "tensor(nan, grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
@@ -145,9 +145,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[-0.5257,  0.0265],\n",
-      "        [-0.8808,  0.0445]]), tensor([2.4115, 4.0392]), tensor([[-0.5026,  0.0906],\n",
-      "        [-3.5980,  0.8394]]), tensor([0.8105, 5.8365]))\n"
+      "(tensor([[-1.7330, -2.9492],\n",
+      "        [-4.5699, -5.9226]]), tensor([-1.3262, -4.2677]), tensor([[ 0.0880, -0.6988],\n",
+      "        [-0.8494, -0.1448]]), tensor([-7.1931, -1.8057]))\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
@@ -168,12 +168,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.5257,  0.0265],\n",
-      "        [-0.8808,  0.0445]])\n",
-      "tensor([2.4115, 4.0392])\n",
-      "tensor([[-0.5026,  0.0906],\n",
-      "        [-3.5980,  0.8394]])\n",
-      "tensor([0.8105, 5.8365])\n"
+      "tensor([[-1.7330, -2.9492],\n",
+      "        [-4.5699, -5.9226]])\n",
+      "tensor([-1.3262, -4.2677])\n",
+      "tensor([[ 0.0880, -0.6988],\n",
+      "        [-0.8494, -0.1448]])\n",
+      "tensor([-7.1931, -1.8057])\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -211,12 +211,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n"
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -245,24 +245,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n",
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n",
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n"
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n",
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n",
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n"
      ]
     }
    ],
@@ -282,40 +282,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.0280, -0.0529],\n",
-       "         [-0.0470, -0.0888]]),\n",
-       " tensor([0.0762, 0.1279]),\n",
-       " tensor([[ 0.0792, -0.1051],\n",
-       "         [-0.0792,  0.1051]]),\n",
-       " tensor([-0.1973,  0.1973]),\n",
-       " tensor([[-0.0280, -0.0529],\n",
-       "         [-0.0470, -0.0888]]),\n",
-       " tensor([0.0762, 0.1279]),\n",
-       " tensor([[ 0.0792, -0.1051],\n",
-       "         [-0.0792,  0.1051]]),\n",
-       " tensor([-0.1973,  0.1973]),\n",
-       " tensor([[-0.0280, -0.0529],\n",
-       "         [-0.0470, -0.0888]]),\n",
-       " tensor([0.0762, 0.1279]),\n",
-       " tensor([[ 0.0792, -0.1051],\n",
-       "         [-0.0792,  0.1051]]),\n",
-       " tensor([-0.1973,  0.1973]),\n",
-       " tensor([[-0.2488,  0.0397],\n",
-       "         [-0.4169,  0.0667]]),\n",
-       " tensor([1.1676, 1.9556]),\n",
-       " tensor([[-0.2909,  0.0979],\n",
-       "         [-1.7594,  0.3671]]),\n",
-       " tensor([0.5039, 2.8196]))"
+       "(tensor([[ 0.0655, -0.0477],\n",
+       "         [-0.0348,  0.0253]]),\n",
+       " tensor([-0.0334,  0.0178]),\n",
+       " tensor([[ 0.0906, -0.0796],\n",
+       "         [-0.0906,  0.0796]]),\n",
+       " tensor([-0.0653,  0.0653]),\n",
+       " tensor([[ 0.0655, -0.0477],\n",
+       "         [-0.0348,  0.0253]]),\n",
+       " tensor([-0.0334,  0.0178]),\n",
+       " tensor([[ 0.0906, -0.0796],\n",
+       "         [-0.0906,  0.0796]]),\n",
+       " tensor([-0.0653,  0.0653]),\n",
+       " tensor([[ 0.0655, -0.0477],\n",
+       "         [-0.0348,  0.0253]]),\n",
+       " tensor([-0.0334,  0.0178]),\n",
+       " tensor([[ 0.0906, -0.0796],\n",
+       "         [-0.0906,  0.0796]]),\n",
+       " tensor([-0.0653,  0.0653]),\n",
+       " tensor([[-0.8993, -1.4507],\n",
+       "         [-2.2676, -2.9740]]),\n",
+       " tensor([-0.6464, -2.1427]),\n",
+       " tensor([[-0.0013, -0.3096],\n",
+       "         [-0.3794, -0.1122]]),\n",
+       " tensor([-3.5639, -0.9355]))"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -343,12 +343,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0840, -0.1587],\n",
-      "        [-0.1410, -0.2665]])\n",
-      "tensor([0.2286, 0.3838])\n",
-      "tensor([[ 0.2376, -0.3153],\n",
-      "        [-0.2376,  0.3153]])\n",
-      "tensor([-0.5920,  0.5920])\n"
+      "tensor([[ 0.1964, -0.1430],\n",
+      "        [-0.1044,  0.0760]])\n",
+      "tensor([-0.1002,  0.0533])\n",
+      "tensor([[ 0.2717, -0.2389],\n",
+      "        [-0.2717,  0.2389]])\n",
+      "tensor([-0.1958,  0.1958])\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -377,12 +377,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0840, -0.1587],\n",
-      "        [-0.1410, -0.2665]])\n",
-      "tensor([0.2286, 0.3838])\n",
-      "tensor([[ 0.2376, -0.3153],\n",
-      "        [-0.2376,  0.3153]])\n",
-      "tensor([-0.5920,  0.5920])\n"
+      "tensor([[ 0.1964, -0.1430],\n",
+      "        [-0.1044,  0.0760]])\n",
+      "tensor([-0.1002,  0.0533])\n",
+      "tensor([[ 0.2717, -0.2389],\n",
+      "        [-0.2717,  0.2389]])\n",
+      "tensor([-0.1958,  0.1958])\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 26,
    "id": "fbc6b756",
    "metadata": {},
    "outputs": [
@@ -412,12 +412,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n"
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n"
      ]
     }
    ],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 27,
    "id": "748e11fe",
    "metadata": {},
    "outputs": [
@@ -450,12 +450,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0280, -0.0529],\n",
-      "        [-0.0470, -0.0888]])\n",
-      "tensor([0.0762, 0.1279])\n",
-      "tensor([[ 0.0792, -0.1051],\n",
-      "        [-0.0792,  0.1051]])\n",
-      "tensor([-0.1973,  0.1973])\n"
+      "tensor([[ 0.0655, -0.0477],\n",
+      "        [-0.0348,  0.0253]])\n",
+      "tensor([-0.0334,  0.0178])\n",
+      "tensor([[ 0.0906, -0.0796],\n",
+      "        [-0.0906,  0.0796]])\n",
+      "tensor([-0.0653,  0.0653])\n"
      ]
     }
    ],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 28,
    "id": "17e6215f",
    "metadata": {},
    "outputs": [
@@ -478,12 +478,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[2.9720, 2.9471],\n",
-      "        [2.9530, 2.9112]])\n",
-      "tensor([3.0762, 3.1279])\n",
-      "tensor([[3.0792, 2.8949],\n",
-      "        [2.9208, 3.1051]])\n",
-      "tensor([2.8027, 3.1973])\n"
+      "tensor([[3.0655, 2.9523],\n",
+      "        [2.9652, 3.0253]])\n",
+      "tensor([2.9666, 3.0178])\n",
+      "tensor([[3.0906, 2.9204],\n",
+      "        [2.9094, 3.0796]])\n",
+      "tensor([2.9348, 3.0652])\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 29,
    "id": "86dcf456",
    "metadata": {},
    "outputs": [
@@ -514,15 +514,15 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[-0.2732, -0.5517],\n",
-      "        [-0.7075, -0.9522]], requires_grad=True)\n",
+      "tensor([[ 0.9868, -1.0277],\n",
+      "        [-0.7411,  0.2353]], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([-1.2873,  0.1420], requires_grad=True)\n",
+      "tensor([0.6279, 0.6512], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([[0.0468, 0.0778],\n",
-      "        [0.8205, 1.3724]], requires_grad=True)\n",
+      "tensor([[ 0.4993,  0.8401],\n",
+      "        [-0.5226,  1.3826]], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([-0.3823,  0.1888], requires_grad=True)\n"
+      "tensor([-0.0163,  0.4733], requires_grad=True)\n"
      ]
     }
    ],
@@ -536,48 +536,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "dce046b3",
+   "execution_count": 30,
+   "id": "eaa93c94",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Entropy Loss Gradient:\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [2, 2]], which is output 0 of TBackward, is at version 2; expected version 1 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22812\\207602838.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Gradient 확인\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Cross Entropy Loss Gradient:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mce_gradient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mgrad_param\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mce_gradient\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mgrad_param\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\metal\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mgrad\u001b[1;34m(outputs, inputs, grad_outputs, retain_graph, create_graph, only_inputs, allow_unused)\u001b[0m\n\u001b[0;32m    226\u001b[0m     return Variable._execution_engine.run_backward(\n\u001b[0;32m    227\u001b[0m         \u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_outputs_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m         inputs, allow_unused, accumulate_grad=False)\n\u001b[0m\u001b[0;32m    229\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [2, 2]], which is output 0 of TBackward, is at version 2; expected version 1 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "optimizer_with_modifier = optim.SGD(model_with_modifier.parameters(), lr=0.01)\n",
-    "optimizer_without_modifier = optim.SGD(model_without_modifier.parameters(), lr=0.01)"
+    "# learning_rate = 0.01\n",
+    "# with torch.no_grad():\n",
+    "#     for param, grad in zip(model.parameters(), ce_gradient):\n",
+    "#         param -= learning_rate * grad\n",
+    "#         print(param)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaa93c94",
+   "id": "d47cdf3b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "learning_rate = 0.01\n",
-    "with torch.no_grad():\n",
-    "    for param, grad in zip(model.parameters(), ce_gradient):\n",
-    "        param -= learning_rate * grad\n",
-    "        print(param)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -596,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
